2008-04-16  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-xml.[ch]: Removed

	* libtwitux/twitux-xml.[ch]:
	* libtwitux/Makefile.am:
	* src/twitux-preferences.c:
	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c:
	* src/twitux-app.c:
	* src/twitux-add-dialog.c:
	* src/twitux-account-dialog.c:
	* src/Makefile.am: Move the gtkbuilder code to libtwitux.

2008-04-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-tweet-list.c: Use only the gtk header needed.
	
2008-04-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-glade.[ch]: Removed.

	* configure.in:
	* data/main_window.xml:
	* po/POTFILES.in:
	* src/twitux-app.c:
	* src/twitux-network.c:
	* src/Makefile.am: Finish converting to
	GtkBuilder.  Had to remove friends submenu, which
	will need to be added back later.

2008-04-04  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-parser.c: Close #1927666 and quiet
	some warnings.

2008-03-29  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-preferences.c:
	* src/twitux-send-message-dialog.[ch]: 
	* src/twitux-spell-dialog.c:
	* src/twitux-label.c:
	* src/twitux-app.c:
	* src/twitux-tweet-list.h:
	* src/twitux-add-dialog.c:
	* src/twitux-account-dialog.c:
	* src/Makefile.am: Enable more compiler warnings, and
	clean up most of the low-hanging fruit.
	

2008-08-29  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c:
	* src/twitux-add-dialog.c:
	* src/twitux-account-dialog.c:
	* src/twitux-preferences.c:
	* src/Makefile.am: Let's use twitux_xml_* functions.

	* data/glade/tray_menu.glade: moved to glade directory

	* src/twitux-app.c: Port tray menu to GtkBuilder

	* src/twitux-xml.c:
	* src/twitux-xml.h: New files

2008-03-27  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-add-dialog.c (twitux_add_dialog_show): 
	* src/twitux-spell-dialog.c (twitux_spell_dialog_show): 
	* src/twitux-send-message-dialog.c (message_setup): 